games.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mario
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mario
  template:
    metadata:
      labels:
        app: mario
    spec:
      containers:
        - name: mario
          image: pengbai/docker-supermario
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: mario
spec:
  type: ClusterIP
  selector:
    app: mario
  ports:
    - port: 80
      targetPort: 8080

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tetris
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tetris
  template:
    metadata:
      labels:
        app: tetris
    spec:
      containers:
        - name: tetris
          image: uzyexe/tetris
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: tetris
spec:
  type: ClusterIP
  selector:
    app: tetris
  ports:
    - port: 80
      targetPort: 80
